--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,16 @@
     color: white;
     width: 560px;
     margin: 0 auto;
+    padding: 50px;
 }
 
 h1 {
     font-size: 24px;
-    margin-top: 100px;
+
 }
 
 p {
-    font-size: 18px;
-    margin-bottom: 100px;
-    
+    font-size: 18px;    
 }
 
 .links {
