--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,17 @@
     padding: 50px;
 }
 
+h1,
+p {
+    margin-top: 0;
+}
+
 h1 {
     font-size: 24px;
-
 }
 
 p {
-    font-size: 18px;    
+    font-size: 18px;
 }
 
 .links {
