strong tag allow margin

--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,9 @@ p {
     margin-top: 40px;
     margin-bottom: 0;
 }
+
+strong {
+    background: yellow;
+    color: black;
+    margin-top: 50px;
+}
