--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     color: white;
     width: 560px;
     margin: 0 auto;
-    padding: 50px;
+    padding: 45px;
 }
 
 h1,
@@ -28,32 +28,15 @@ p {
     margin-bottom: 0;
 }
 
-strong {
-    background: yellow;
-    color: black;
-}
-
-.accent-color {
-    color: yellow;
-}
-
 .accent-color {
     color: #ffe600;
 }
 
-a:link,
-a:visited {
+a {
     color: #ffe600;
 }
 
+a:hover,
 a:focus {
-    color: aquamarine;
-}
-
-a:hover {
-    color: firebrick;
-}
-
-a:active {
-    color: plum;
+    color: aqua;
 }
