--- a/css-fundamentals/style.css
+++ b/css-fundamentals/style.css
@@ -24,7 +24,7 @@ p {
 }
 
 a {
-    color: #ffe600;
+    color: #000;
 }
 
 .button {
@@ -32,6 +32,7 @@ a {
     color: #000;
     padding: 20px;
     display: inline-block;
+    margin-bottom: 50px;
 }
 
 .accent-color {
