--- a/css-fundamentals/style.css
+++ b/css-fundamentals/style.css
@@ -28,10 +28,12 @@ a {
 }
 
 .button {
-    background: #ffe600;
-    color: #000;
-    padding: 20px;
     display: inline-block;
+    background: #ffe600;
+    color: black;
+    width: 175px;
+    padding: 15px 0;
+    text-align: center;
     margin-bottom: 50px;
 }
 
