--- a/css-fundamentals/style.css
+++ b/css-fundamentals/style.css
@@ -31,10 +31,8 @@ a {
     display: inline-block;
     background: #ffe600;
     color: black;
-    width: 175px;
-    padding: 15px 0;
+    padding: 15px 45px;
     text-align: center;
-    margin-bottom: 50px;
 }
 
 .accent-color {
