--- a/css-fundamentals/style.css
+++ b/css-fundamentals/style.css
@@ -24,7 +24,7 @@ p {
 }
 
 a {
-    color: #000;
+    color: #ffe600;
 }
 
 .button {
@@ -33,6 +33,8 @@ a {
     color: black;
     padding: 15px 30px;
     text-align: center;
+    text-decoration: none;
+    margin-bottom: 50px;
 }
 
 .accent-color {
