styles was defined as element, classes and id to show the specificity

--- a/css-fundamentals/style.css
+++ b/css-fundamentals/style.css
@@ -45,3 +45,15 @@ a {
     margin-top: 0;
     margin-bottom: 0;
 }
+
+#test {
+    color: fuchsia;
+}
+
+p {
+    color: pink;
+}
+
+.test {
+    color: lightblue;
+}
