add some styles to the header element

--- a/css-fundamentals/layout-2/css/style.css
+++ b/css-fundamentals/layout-2/css/style.css
@@ -20,6 +20,8 @@ a {
     color: #ffe600;
 }
 
-.accent-color {
-    color: #ffe600;
+header {
+    padding: 50px;
+    background: #ffe600;
+    color: #000;
 }
