instead of compound selector add a class name to that selector

--- a/css-fundamentals/layout-2/css/style.css
+++ b/css-fundamentals/layout-2/css/style.css
@@ -36,7 +36,11 @@ header {
     color: #fff;
 }
 
-.section-two a {
+/* .section-two a {
+    color: black;
+} */
+
+.section-two-link {
     color: black;
 }
 
