--- a/css-fundamentals/layout-2/css/style.css
+++ b/css-fundamentals/layout-2/css/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
-    font-family: sans-serif;
+    font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text,
+        Times New Roman, serif;
 }
 
 h1,
