embed the google font

--- a/css-fundamentals/layout-2/css/style.css
+++ b/css-fundamentals/layout-2/css/style.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
-    font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text,
-        Times New Roman, serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 h1,
