--- a/css-fundamentals/layout-2/css/style.css
+++ b/css-fundamentals/layout-2/css/style.css
@@ -61,3 +61,17 @@ header {
     background: #000;
     color: #fff;
 }
+
+/* For this demo */
+
+.body {
+    color: lightblue;
+}
+
+.section-one {
+    color: orange;
+}
+
+p {
+    color: pink;
+}
