--- a/css-fundamentals/layout-3/css/style.css
+++ b/css-fundamentals/layout-3/css/style.css
@@ -14,6 +14,7 @@ strong {
 
 h1 {
     font-size: 36px;
+    margin: 0;
 }
 
 h2 {
@@ -35,4 +36,12 @@ header {
     background: #2e354f;
     padding: 45px 0;
     color: #fff;
+    width: 620px;
+    margin: 0 auto;
+}
+
+.section-one {
+    width: 620px;
+    margin: 0 auto;
+    padding: 45px 0;
 }
