--- a/css-fundamentals/layout-3/css/style.css
+++ b/css-fundamentals/layout-3/css/style.css
@@ -63,14 +63,16 @@ header {
     background: #2e354f;
     padding: 45px 0;
     color: #fff;
-    width: 620px;
-    margin: 0 auto;
 }
 
 section {
+    padding: 45px 0;
+}
+
+.container {
     width: 620px;
     margin: 0 auto;
-    padding: 45px 0;
+    border: 2px solid magenta;
 }
 
 .section-two {
