--- a/think-responsively/layout-3-responsive/css/style.css
+++ b/think-responsively/layout-3-responsive/css/style.css
@@ -72,7 +72,7 @@ section {
 .container {
     width: 620px;
     margin: 0 auto;
-    /* border: 2px solid magenta; */
+    border: 2px solid magenta;
 }
 
 .section-two {
