--- a/think-responsively/em-layout-3/css/styles.css
+++ b/think-responsively/em-layout-3/css/styles.css
@@ -1,18 +1,22 @@
 body {
     margin: 0;
-    font-size: 16px;
+    font-size: 10px;
     font-family: 'Lato', sans-serif;
     color: #2e354f;
 }
 
 .section-one {
-    /* font-size: 20px; */
+    font-size: 2em;
 }
 
 ul {
     /* 1.5em = 150% */
     font-size: 1.5em;
 }
+
+/* li {
+    font-size: 1.5em;
+} */
 
 h1,
 h2,
