--- a/think-responsively/em-layout-3/css/styles.css
+++ b/think-responsively/em-layout-3/css/styles.css
@@ -1,22 +1,22 @@
 body {
     margin: 0;
-    font-size: 10px;
+    font-size: 1rem;
     font-family: 'Lato', sans-serif;
     color: #2e354f;
 }
 
 .section-one {
-    font-size: 2em;
+    font-size: 2rem;
 }
 
 ul {
     /* 1.5em = 150% */
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
-/* li {
-    font-size: 1.5em;
-} */
+li {
+    font-size: 1.5rem;
+}
 
 h1,
 h2,
@@ -27,12 +27,12 @@ strong {
 /* Typography */
 
 h1 {
-    font-size: 3em;
+    font-size: 3rem;
     margin: 0;
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 2rem;
     color: #ef5839;
 }
 
