Extra class was created to shrink and grow the the font size

--- a/think-responsively/ems-rems/css/styles.css
+++ b/think-responsively/ems-rems/css/styles.css
@@ -37,6 +37,18 @@ a {
     margin-bottom: 50px;
 }
 
+.button:hover {
+    background: orange;
+}
+
+.btn-big {
+    font-size: 1.5rem;
+}
+
+.btn-small {
+    font-size: .75rem;
+}
+
 .accent-color {
     color: #ffe600;
 }
