--- a/think-responsively/layout-4/css/styles.css
+++ b/think-responsively/layout-4/css/styles.css
@@ -1,4 +1,8 @@
 /* Layout */
+img {
+    max-width: 100%;
+}
+
 .container {
     width: 90%;
     max-width: 980px;
@@ -7,5 +11,4 @@
 
 .columns {
     display: flex;  
-    justify-content: space-between;
 }
