--- a/think-responsively/layout-4/css/styles.css
+++ b/think-responsively/layout-4/css/styles.css
@@ -1,3 +1,19 @@
+body {
+    font-size: 1.125rem;
+    color: #707070;
+    margin: 0;
+}
+
+/* Typography */
+h1 {
+    font-size: 3rem;
+    color: #212614;;
+}
+
+h2 {
+    font-size: 1.5rem;
+}
+
 /* Layout */
 img {
     max-width: 100%;
