--- a/think-responsively/layout-4/css/styles.css
+++ b/think-responsively/layout-4/css/styles.css
@@ -18,6 +18,10 @@ h2 {
     font-size: 1.5rem;
 }
 
+p {
+    margin-top: 0;
+}
+
 /* Layout */
 img {
     max-width: 100%;
@@ -38,3 +42,4 @@ img {
     background: #212614;
     padding: 1em;
 }
+
