--- a/think-responsively/layout-4/css/styles.css
+++ b/think-responsively/layout-4/css/styles.css
@@ -7,7 +7,8 @@ body {
 /* Typography */
 h1 {
     font-size: 3rem;
-    color: #212614;;
+    color: #212614;
+    text-align: center;
 }
 
 h1 span {
@@ -37,12 +38,6 @@ img {
     display: flex;
     justify-content: space-between;
     margin: 1em 0;
-
-    border: 5px solid steelblue;
-}
-
-.col {
-    border: 2px solid magenta;
 }
 
 .col-1 {
