move the 650px part up above the 400px part

--- a/think-responsively/layout-4/css/styles.css
+++ b/think-responsively/layout-4/css/styles.css
@@ -5,19 +5,19 @@ body {
     background: pink;
 }
 
-/* from a minimum width of 400px and bigger */
-@media (min-width: 400px) and (max-width: 649px) {
-    body {
-        background: purple;
-    }
-}
-
 /* from a minimum width of 650px and bigger */
 @media (min-width: 650px) {
     body {
         background: orange;
     }
 }
+
+/* from a minimum width of 400px and bigger */
+/* @media (min-width: 400px) and (max-width: 649px) {
+    body {
+        background: purple;
+    }
+} */
 
 /* Typography */
 h1 {
