--- a/think-responsively/layout-4/css/styles.css
+++ b/think-responsively/layout-4/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 /* from a minimum width of 650px and bigger */
-@media (min-width: 650px) {
+@media (min-width: 500px) and (orientation: landscape) {
     body {
         background: orange;
     }
