add the media query stack the column upside down

--- a/think-responsively/layout-4/css/styles.css
+++ b/think-responsively/layout-4/css/styles.css
@@ -40,6 +40,13 @@ img {
     margin: 1em 0;
 }
 
+@media (max-width: 600px) {
+    .columns {
+        flex-direction: column;
+    }
+
+}
+
 .col-1 {
     width: 20%;
 }
