The basic boilerplate for styleing

--- a/think-responsively/layout-5/css/styles.css
+++ b/think-responsively/layout-5/css/styles.css
@@ -3,3 +3,19 @@
     font-family: 'Lora', serif;
     font-family: 'Ubuntu', sans-serif;
  */
+
+ nav ul {
+
+ }
+
+ nav li {
+
+ }
+
+ nav a {
+
+ }
+
+ nav a:hover {
+    
+ }
