add colors margins for presentation purposes

--- a/think-responsively/layout-5/css/styles.css
+++ b/think-responsively/layout-5/css/styles.css
@@ -5,17 +5,17 @@
  */
 
  nav ul {
-
+    border: 1px solid magenta;
  }
 
  nav li {
-
+    border: 2px dotted orange;
  }
 
  nav a {
-
+    border: 3px solid green;
  }
 
  nav a:hover {
-    
+
  }
