This approach will produce some error when a new item was added to the nav

--- a/think-responsively/layout-5/css/styles.css
+++ b/think-responsively/layout-5/css/styles.css
@@ -9,11 +9,12 @@
     list-style: none;
     padding: 0;
     display: flex;
-    justify-content: space-between;
  }
 
  nav li {
     border: 4px dotted orange;
+
+    margin: 0 1em;
  }
 
  nav a {
