The parent header element was centered

--- a/think-responsively/layout-5/css/styles.css
+++ b/think-responsively/layout-5/css/styles.css
@@ -4,6 +4,10 @@
     font-family: 'Ubuntu', sans-serif;
  */
 
+ header {
+    text-align: center;
+ }
+
  nav ul {
     border: 1px solid magenta;
     list-style: none;
