adding font weight and color to the h1

--- a/think-responsively/layout-5/css/styles.css
+++ b/think-responsively/layout-5/css/styles.css
@@ -12,9 +12,12 @@
  /* ==========
     Typography
  ===========*/
- h1{
+h1 {
     font-family: 'Lora', serif;
- }
+    font-weight: 400;
+    color: #143774;
+}
+
 
  header {
     text-align: center;
