--- a/think-responsively/layout-5/css/styles.css
+++ b/think-responsively/layout-5/css/styles.css
@@ -26,6 +26,9 @@ h1 {
     font-size: .75rem;
 }
 
+ /* ==========
+    Layout
+ ===========*/
 
  header {
     text-align: center;
@@ -33,6 +36,7 @@ h1 {
     padding: 2em 0;
  }
 
+  /* navigation */
  nav ul {
     list-style: none;
     padding: 0;
@@ -48,9 +52,14 @@ h1 {
     text-decoration: none;
     color: #707070;
     font-weight: 700;
+    padding: 0.25em 0;
  }
 
  nav a:hover,
  nav a:focus {
     color: #1792d2;
+ }
+
+ .current-page {
+    border-bottom: 1px solid #707070;
  }
