--- a/think-responsively/layout-5/css/styles.css
+++ b/think-responsively/layout-5/css/styles.css
@@ -31,6 +31,13 @@ h1 {
     Layout
  ===========*/
 
+ .container {
+    width: 90%;
+    max-width: 900px;
+    border: 1px solid magenta;
+    margin: 0 auto;
+ }
+
  header {
     text-align: center;
     background: #f8f8f8;
