using modifier class to place the nav elements side by side

--- a/think-responsively/layout-5/css/styles.css
+++ b/think-responsively/layout-5/css/styles.css
@@ -38,6 +38,10 @@ h1 {
     margin: 0 auto;
  }
 
+ .container-nav {
+    display: flex;
+ }
+
  header {
     text-align: center;
     background: #f8f8f8;
