make the nav element stacked and center those elements

--- a/think-responsively/layout-5/css/styles.css
+++ b/think-responsively/layout-5/css/styles.css
@@ -42,6 +42,16 @@ h1 {
     justify-content: space-between;
  }
 
+ @media (max-width: 675px) {
+    .container-nav {
+        flex-direction: column;
+    }
+
+    header {
+        text-align: center;
+    }
+ }
+
  header {
     background: #f8f8f8;
     padding: 2em 0;
