- We are going to make the nav list item stacked for really small screen sizes

--- a/think-responsively/layout-5/css/styles.css
+++ b/think-responsively/layout-5/css/styles.css
@@ -84,3 +84,9 @@ h1 {
  .current-page {
     border-bottom: 1px solid #707070;
  }
+
+ @media (max-width: 675px) {
+    nav ul {
+        flex-direction: column;
+    }
+ }
